--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-i18n": "4.15.0",
     "@strapi/plugin-users-permissions": "4.15.0",
     "@strapi/provider-upload-cloudinary": "^4.15.0",
     "@strapi/strapi": "4.15.0",
-    "pg": "8.8.0"
+    "@stripe/react-stripe-js": "^2.4.0",
+    "pg": "8.8.0",
+    "stripe": "^14.9.0"
   },
   "author": {
     "name": "A Strapi developer"
